src/style.forum.css
/* Styles specific to the forum family of pages */

fieldset.forum-status-selection {
  max-width: max-content;
  border-radius: 0.5em;
  padding: 0 0.5em;
}

.ForumPostEditor {
  display: flex;
  flex-direction: column;
  gap: 1em;
  padding: 0.5em;
}

.ForumPostEditor > .tab-bar{
}

.ForumPostEditor > .tab-container {
}

.ForumPostEditor > .tab-container > .tabs {
  min-height: 16em;
}

.ForumPostEditor > .tab-container > .tabs > .tab-panel.debug {
  display: flex;
  flex-direction: column;
  gap: 0.75em;
}

.ForumPostEditor > .tab-container > .tabs > .tab-panel.debug label,
.ForumPostEditor > .tab-container > .tabs > .tab-panel.debug input[type=checkbox]{
  cursor: pointer;
}


.ForumPostEditor > .tab-container >  .tabs > .tab-panel {
  display: flex;
  flex-direction: column;
}

.ForumPostEditor .tab-panel.editor-wrapper > .editor {
  max-width: initial;
  min-height: 18em;
  flex-grow: 1
}

.ForumPostEditor > .buttons > .mimetype-wrapper,
.ForumPostEditor > .titlebar{
  display: flex;
  flex-direction: row;
  font-size: 120%;
  align-items: stretch;
  gap: 0.75em;
}
.ForumPostEditor > .titlebar{
  align-items: center;
}
.ForumPostEditor > .titlebar > .title {
  flex-grow: 1;
  /* Clear some globals... */
  font-size: inherit;
  max-width: initial;
  color: initial;
}

.ForumPostEditor > .buttons {
  font-size: 90%;
  display: flex;
  flex-direction: row;
  gap: 0.75em;
  flex-wrap: wrap;
}
.ForumPostEditor > .buttons > label {
  white-space: nowrap;
  display: flex;
  flex-direction: row;
  align-items: last baseline;
  cursor: pointer;
  border: 1px inset rgba(128, 128, 128, 0.5);
  border-radius: 0.25em;
  padding: 0.1em;
}
.ForumPostEditor > .buttons > label > input[type=checkbox]{
  cursor: pointer;
}

